--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <p>Created by [Your Name] | Web Technology Assignment</p>
+        <p>Created by Pappu pelu kahe to aapaki lelu</p>
     </footer>
 
     <script src="script.js"></script>
