--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <!-- Header Section -->
     <header class="header">
         <h1 class="title">🌦 Weather Dashboard</h1>
-        <div class="header-controls">
+        <!-- <div class="header-controls">
             <button class="theme-toggle" id="themeToggle">
                 <span class="theme-icon">🌙</span>
             </button>
-        </div>
+        </div> -->
     </header>
 
     <!-- Search Section -->
