--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <!-- Header Section -->
     <header class="header">
         <h1 class="title">🌦 Weather Dashboard</h1>
-        <!-- <div class="header-controls">
+        <div class="header-controls">
             <button class="theme-toggle" id="themeToggle">
                 <span class="theme-icon">🌙</span>
             </button>
-        </div> -->
+        </div>
     </header>
 
     <!-- Search Section -->
@@ -29,20 +29,22 @@
         </div>
     </section>
 
+   
+
     <!-- Main Weather Display -->
     <main class="main-weather" id="mainWeather">
         <div class="weather-card fade-in">
             <div class="current-weather">
                 <div class="weather-info">
-                    <h2 class="city-name" id="cityName">New York, US</h2>
+                    <h2 class="city-name" id="cityName">-</h2>
                     <div class="temperature-container">
-                        <span class="temperature" id="temperature">22</span>
+                        <span class="temperature" id="temperature">-</span>
                         <div class="temp-controls">
                             <span class="temp-unit" id="tempUnit">°C</span>
                             <button class="temp-toggle" id="tempToggle">°F</button>
                         </div>
                     </div>
-                    <p class="weather-description" id="weatherDescription">Partly Cloudy</p>
+                    <p class="weather-description" id="weatherDescription">-</p>
                 </div>
                 <div class="weather-icon-container">
                     <div class="weather-icon" id="weatherIcon">⛅</div>
@@ -53,15 +55,15 @@
             <div class="weather-details">
                 <div class="detail-item">
                     <span class="detail-label">Humidity</span>
-                    <span class="detail-value" id="humidity">65%</span>
+                    <span class="detail-value" id="humidity">-</span>
                 </div>
                 <div class="detail-item">
                     <span class="detail-label">Wind Speed</span>
-                    <span class="detail-value" id="windSpeed">12 km/h</span>
+                    <span class="detail-value" id="windSpeed">-</span>
                 </div>
                 <div class="detail-item">
                     <span class="detail-label">Pressure</span>
-                    <span class="detail-value" id="pressure">1013 hPa</span>
+                    <span class="detail-value" id="pressure">-</span>
                 </div>
             </div>
         </div>
@@ -76,10 +78,11 @@
     </section>
 
     <!-- Loading Indicator -->
-    <div class="loading" id="loading" style="display: none;">
-        <div class="loading-spinner"></div>
-        <p>Loading weather data...</p>
+    <div class="loading" id="loading" style="display: none !important;">
+    <div class="loading-spinner"></div>
+    <!-- <p>Loading weather data...</p> -->
     </div>
+
 
     <!-- Error Message -->
     <div class="error-message" id="errorMessage" style="display: none;">
